--- a/Weather_App/index.html
+++ b/Weather_App/index.html
@@ -34,5 +34,21 @@
             </div>
         </div>
     </div>
+
+    <script>
+        const apikey = "0c31a100aa225181fcde5388295c543f ";
+        const apiUrl= "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=lahore";
+     async function checkWeather(){
+        const response = await fetch(apiUrl+`&appid=${apikey}`)
+        var data = await response.json();
+
+        document.querySelector(".city").innerHTML = data.name;
+        document.querySelector(".temp").innerHTML = data.main.temp;
+        document.querySelector(".humidity").innerHTML = data.main.humidity;
+        document.querySelector(".wind").innerHTML = data.wind.speed;
+     }
+
+
+    </script>
 </body>
 </html>
