--- a/Weather_App/index.html
+++ b/Weather_App/index.html
@@ -36,17 +36,26 @@
     </div>
 
     <script>
-        const apikey = "0c31a100aa225181fcde5388295c543f ";
-        const apiUrl= "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=lahore";
-     async function checkWeather(){
-        const response = await fetch(apiUrl+`&appid=${apikey}`)
+        const apikey = "0c31a100aa225181fcde5388295c543f";
+        const apiUrl= "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
+
+        const searchBox = document.querySelector(".search input");
+        const searchBtn = document.querySelector(".search button");
+
+     async function checkWeather(city){
+        const response = await fetch(apiUrl+ city+ `&appid=${apikey}`)
         var data = await response.json();
 
-        document.querySelector(".city").innerHTML = data.name;
-        document.querySelector(".temp").innerHTML = data.main.temp;
-        document.querySelector(".humidity").innerHTML = data.main.humidity;
-        document.querySelector(".wind").innerHTML = data.wind.speed;
+        document.querySelector(".city").innerHTML = data.name ;
+        document.querySelector(".temp").innerHTML = Math.round(data.main.temp)  + "°C";
+        document.querySelector(".humidity").innerHTML = data.main.humidity +"%" ;
+        document.querySelector(".wind").innerHTML = data.wind.speed +"km/h";
      }
+checkWeather();
+
+searchBtn.addEventListener("click", ()=> {
+    checkWeather(searchBox.value);
+})
 
 
     </script>
